# StockReader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  read_stocks.cpp
data/: input.csv  input0.csv  input1.csv  input2.csv  output.csv
dependencies/: CMakeLists.txt
libs/: Stock.cpp  Stock.h  StockOpt.cpp  StockOpt.h  StocksOutputter.cpp  StocksOutputter.h  TradesInputter.cpp  TradesInputter.h
tests/: CMakeLists.txt  inputTests.cpp  main.cpp  outputTests.cpp  stockTests.cpp
